# Qt6QuickMosquitto

./: CMakeLists.txt  README.md  qmldir  qmosquitto.cpp  qmosquitto.h
mosquitto/: CMakeLists.txt  config.mk
